# Rookie

./: .gitignore  CMakeLists.txt  README.md  kill.sh  start.sh
include/: Ctracker.h  Hungarian.h  ImgFeature.h  ImgSocket.h  KCFTracker.h  KM.h  Kalman.h  NTracker.h  camera.h  common.h  detector.h  imgshare.h  motion.h  navigation.h  proshare.h  tracker.h  usart.h
script/: web.py
script/templates/: index.html  status.html
src/: Ctracker.cpp  Hungarian.cpp  ImgFeature.cpp  KCFTracker.cpp  KM.cpp  Kalman.cpp  NTracker.cpp  camera.cpp  common.cpp  detector.cpp  imgshare.cpp  main.cpp  motion.cpp  navigation.cpp  proshare.cpp  pyshare.cpp  tracker.cpp  usart.cpp
yolov5/: socketimage.py
yolov5/models/: yolov5l.yaml  yolov5m.yaml
yolov5/utils/: datasets.py  torch_utils.py  utils.py
yolov5/weights/5s/: best.pt
